--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "angular": "1.3.*"
+    "angular": "1.3.*",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {}
 }
