--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "latest",
-    "grunt-cli": "latest"
+    "bower": "^1.3.3",
+    "grunt": "^0.4.4",
+    "grunt-bower-requirejs": "^0.10.0",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "load-grunt-tasks": "^0.4.0"
   }
 }
