--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,12 @@
 {
-  "name": "test",
+  "name": "myapp",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
     "angular": "1.3.*",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "bootstrap-sass-official": "~3.1.1+2",
+    "requirejs": "~2.1.11"
   },
   "devDependencies": {}
 }
