--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular": "1.3.*",
     "jquery": "~2.1.1",
     "bootstrap-sass-official": "~3.1.1+2",
-    "requirejs": "~2.1.11"
+    "requirejs": "~2.1.11",
+    "angular-bootstrap": "~0.11.0"
   },
   "devDependencies": {}
 }
