--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "grunt": "^0.4.4",
     "grunt-bower-requirejs": "^0.10.0",
     "grunt-contrib-requirejs": "^0.4.4",
-    "load-grunt-tasks": "^0.4.0"
+    "grunt-karma": "^0.8.3",
+    "karma": "^0.12.14",
+    "karma-coverage": "^0.2.1",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.1",
+    "load-grunt-tasks": "^0.4.0",
+    "requirejs": "^2.1.11"
   }
 }
