--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "angular": "1.3.*",
     "jquery": "~2.1.1",
-    "bootstrap-sass-official": "~3.1.1+2",
+    "bootstrap-sass-official": "~3.1.1",
     "requirejs": "~2.1.11",
     "angular-bootstrap": "~0.11.0"
   },
