--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "zfcampus/zf-apigility-admin": "~1.0-dev",
         "zfcampus/zf-apigility-welcome": "~1.0-dev",
         "zfcampus/zf-console": "~1.0-dev",
-        "zfcampus/zf-deploy": "dev-master"
+        "zfcampus/zf-deploy": "dev-master",
+        "phpunit/phpunit": "4.1.*"
     }
 }
