--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-/vendor
 /.vagrant
 /composer.lock
+/.sass-cache
 /puphpet/files/dot/ssh/id_rsa.pub
 /puphpet/files/dot/ssh/id_rsa
-/public/vendor/
-/public/build/
 /nbproject/
 /.idea
-/node_modules/
 /config/autoload/local.php
 /config/development.config.php
-/.sass-cache
+/vendor
+/node_modules/
+/data
+/public/vendor/
+/public/build/
+/public/data/
