--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,6 @@
 {
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
+    "config": {
+        "process-timeout": 5000
     },
     "repositories": [
         {
@@ -11,34 +8,26 @@
             "type": "git"
         }
     ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev",
+            "dev-develop": "1.1-dev"
+        }
+    },
     "require": {
         "php": ">=5.3.23",
-        "kapitchi/kap-ng": "dev-master",
-        "bshaffer/oauth2-server-php": "dev-develop",
-        "rwoverdijk/assetmanager": "~1.3",
         "zendframework/zendframework": "~2.3",
-        "zfcampus/zf-apigility": "~1.0-dev",
-        "zfcampus/zf-apigility-provider": "~1.0-dev",
-        "zfcampus/zf-apigility-documentation": "~1.0-dev",
-        "zfcampus/zf-api-problem": "~1.0-dev",
-        "zfcampus/zf-configuration": "~1.0-dev",
-        "zfcampus/zf-content-negotiation": "~1.0-dev",
-        "zfcampus/zf-content-validation": "~1.0-dev",
+        "zfcampus/zf-apigility": "~1.0",
+        "zfcampus/zf-apigility-documentation": "~1.0",
         "zfcampus/zf-development-mode": "~2.0",
-        "zfcampus/zf-hal": "~1.0-dev",
-        "zfcampus/zf-mvc-auth": "~1.0-dev",
-        "zfcampus/zf-oauth2": "~1.0-dev",
-        "zfcampus/zf-rest": "~1.0-dev",
-        "zfcampus/zf-rpc": "~1.0-dev",
-        "zfcampus/zf-versioning": "~1.0-dev"
+        "kapitchi/kap-ng": "dev-master"
     },
     "require-dev": {
         "zendframework/zftool": "dev-master",
         "zendframework/zend-developer-tools": "dev-master",
-        "zfcampus/zf-apigility-admin": "~1.0-dev",
-        "zfcampus/zf-apigility-welcome": "~1.0-dev",
-        "zfcampus/zf-console": "~1.0-dev",
-        "zfcampus/zf-deploy": "dev-master",
+        "zfcampus/zf-apigility-admin": "~1.0",
+        "zfcampus/zf-apigility-welcome": "~1.0",
+        "zfcampus/zf-deploy": "~1.0",
         "phpunit/phpunit": "4.1.*"
     }
 }
