--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -2,7 +2,7 @@
 return array(
     'db' => array(
         'adapters' => array(
-            'mysql-local' => array(
+            'DefaultDbAdapter' => array(
                 'driver' => 'Pdo_Mysql',
                 'database' => 'myapp',
                 'username' => 'dbuser',
