--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,15 @@
     },
     "repositories": [
         {
-            "url": "https://github.com/kapitchi/KapNg.git",
+            "url": "https://github.com/kapitchi/kap-apigility.git",
+            "type": "git"
+        },
+        {
+            "url": "https://github.com/kapitchi/kap-ng.git",
+            "type": "git"
+        },
+        {
+            "url": "https://github.com/kapitchi/kap-require-js.git",
             "type": "git"
         }
     ],
@@ -20,7 +28,9 @@
         "zfcampus/zf-apigility": "~1.0",
         "zfcampus/zf-apigility-documentation": "~1.0",
         "zfcampus/zf-development-mode": "~2.0",
-        "kapitchi/kap-ng": "dev-master"
+        "kapitchi/kap-require-js": "dev-master",
+        "kapitchi/kap-ng": "dev-master",
+        "kapitchi/kap-apigility": "dev-master"
     },
     "require-dev": {
         "zendframework/zftool": "dev-master",
